--- a/bhavesh.yml
+++ b/bhavesh.yml
@@ -1,13 +1,21 @@
 ---
 - name: Test Connection with Semaphore
   hosts: localhost
-  #become: yes
+  become: yes
 
   tasks:
+    - name: Create a test file
+      debug:
+        msg: "Creating test file at /tmp/semaphore_test_file.txt"
+      
     - name: Create a test file
       file:
         path: /tmp/semaphore_test_file.txt
         state: touch
+
+    - name: Write a message to the test file
+      debug:
+        msg: "Writing message to the test file"
 
     - name: Write a message to the test file
       copy:
