--- a/bhavesh.yml
+++ b/bhavesh.yml
@@ -1,6 +1,7 @@
 ---
 - name: Test Connection with Semaphore Container
-  hosts: vivek
+  hosts: localhost
+  connection: local
 
   tasks:
     - name: Create a test file on local /tmp
