--- a/b.yml
+++ b/b.yml
@@ -1,19 +1,47 @@
 ---
-- name: Setup and Deploy Tomcat Container locally
-  hosts: localhost
-  connection: local
+- name: Deploy Tomcat container
+  hosts: my_servers  
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+    tomcat_image: "docker.io/library/tomcat:latest"
+    tomcat_container_name: "tomcat_container"
+    tomcat_ports:
+      - "8075:8080"
+    tomcat_status_filter: "name=tomcat_container"
 
   tasks:
-    - name: Pull Tomcat image from Docker Hub using Podman
+    - name: Pull the Tomcat container image
       containers.podman.podman_image:
-        name: tomcat:latest
-        executable: /usr/bin/podman  # Specify the correct path to podman executable
+        name: "{{ tomcat_image }}"
+        tag: latest
 
-    - name: List Podman images
-      ansible.builtin.command:
-        cmd: /usr/bin/podman images  # Specify the correct path to podman executable
-      register: images_output
+    - name: Run Tomcat container
+      containers.podman.podman_container:
+        name: "{{ tomcat_container_name }}"
+        image: "{{ tomcat_image }}"
+        state: started
+        ports: "{{ tomcat_ports }}"
 
-    - name: Display Podman images
-      ansible.builtin.debug:
-        var: images_output.stdout_lines
+    - name: Wait for Tomcat to start
+      wait_for:
+        host: localhost
+        port: 8075
+        delay: 10
+        timeout: 120
+
+    - name: Verify Tomcat container is running
+      command: podman ps --filter "{{ tomcat_status_filter }}" --format "{% raw %}{{.Status}}{% endraw %}}"
+      register: container_status
+
+    - name: Debug container status
+      debug:
+        var: container_status.stdout
+
+    - name: Print Tomcat container logs for debugging
+      command: podman logs {{ tomcat_container_name }}
+      register: tomcat_logs
+      ignore_errors: yes
+
+    - name: Debug Tomcat logs
+      debug:
+        var: tomcat_logs.stdout
